<resources>
    <string name="app_name">My Gallery app</string>
    <string name="deleteQuestion">Do you want to delete this file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sort_by_date_asc">Sort by date &#8593;</string>
    <string name="sort_by_name_desc">Sort by name &#8595;</string>
    <string name="sort_by_date_desc">Sort by date &#8595;</string>
    <string name="sort_by_name_asc">Sort by name &#8593;</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="play_video">Play Video</string>
    <string name="play_audio">Play Audio</string>
</resources>
