<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.edu.pwr.lab23.i236764.MainActivity">
    <item
        android:id="@+id/action_sort_date_asc"
        android:orderInCategory="100"
        android:title="@string/sort_by_date_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_date_desc"
        android:orderInCategory="100"
        android:title="@string/sort_by_date_desc"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_name_asc"
        android:orderInCategory="100"
        android:title="@string/sort_by_name_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_name_desc"
        android:orderInCategory="100"
        android:title="@string/sort_by_name_desc"
        app:showAsAction="never" />
</menu>