<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:visibility="invisible">

    <TextView
        android:id="@+id/deleteInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:text="@string/deleteQuestion"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonDeleteYes"
        android:layout_width="52dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="143dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="0dp"
        android:text="@string/yes"
        android:textSize="10sp" />

    <Button
        android:id="@+id/buttonDeleteNo"
        android:layout_width="52dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="0dp"
        android:text="@string/no"
        android:textSize="10sp" />
</RelativeLayout>