<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoActivity">

    <RelativeLayout
        android:id="@+id/front"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible">

        <Button
            android:id="@+id/audioPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="play"
            android:padding="20dp"
            android:text="@string/play_audio"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <Button
            android:id="@+id/videoPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/audioPlay"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="play"
            android:padding="20dp"
            android:text="@string/play_video"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/audioLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="85dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="playAudio"
            android:padding="20dp"
            android:text="@string/play"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="85dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="pauseAudio"
            android:padding="20dp"
            android:text="@string/pause"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:visibility="visible" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_marginTop="50dp"
            android:padding="10dp" />

        <SeekBar
            android:id="@+id/scrubber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar"
            android:layout_marginTop="50dp"
            android:padding="10dp" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrubber"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="85dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="back"
            android:padding="20dp"
            android:text="@string/back"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/videoLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <Button
            android:id="@+id/back2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="back"
            android:padding="20dp"
            android:text="@string/back"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/back2"
            android:onClick="playVideo" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
